Make profile error dialog async

So that it does not run a nested message loop to block mojo
messages.

BUG=729701

Review-Url: https://codereview.chromium.org/2929953002
Cr-Commit-Position: refs/heads/master@{#479389}

Former-commit-id: 2404367d4408db72ffdda3a5d7e520ce9c4f4590